fix: dev: master: added babel, jest, & updated packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "es2018"
     ],
     "sourceMap": true,
-    "rootDir": ".",
+    "rootDir": "src",
     "experimentalDecorators": true,
     "strict": true,
     "esModuleInterop": true,
