--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "tsc"
   },
   "author": "Chandresh Rajkumar Manonmani <cs1193@gmail.com> (chandreshrm.name)",
   "license": "UNLICENSED",
@@ -12,21 +13,40 @@
     "@electron-forge/async-ora": "^6.0.0-beta.57",
     "@electron-forge/plugin-base": "^6.0.0-beta.57",
     "@electron-forge/shared-types": "^6.0.0-beta.57",
-    "@electron-forge/web-multi-logger": "^6.0.0-beta.57",
+    "@lerna/package-graph": "^4.0.0",
     "debug": "^4.3.1",
     "fs-extra": "^10.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@babel/register": "^7.14.5",
     "@types/debug": "^4.1.5",
     "@types/fs-extra": "^9.0.11",
+    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.2",
+    "@types/rimraf": "^3.0.0",
+    "@types/semver": "^7.3.6",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
+    "babel-jest": "^27.0.2",
+    "babel-plugin-source-map-support": "^2.1.3",
+    "commitizen": "^4.2.4",
+    "cross-env": "^7.0.3",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
+    "jest": "^27.0.4",
+    "rimraf": "^3.0.2",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^10.0.0",
+    "typedoc": "^0.20.36",
     "typescript": "^4.3.2"
   }
 }
