--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rimraf !lib/.gitkeep lib/**/*",
     "build": "tsc"
   },
   "author": "Chandresh Rajkumar Manonmani <cs1193@gmail.com> (chandreshrm.name)",
@@ -13,6 +13,7 @@
     "@electron-forge/async-ora": "^6.0.0-beta.57",
     "@electron-forge/plugin-base": "^6.0.0-beta.57",
     "@electron-forge/shared-types": "^6.0.0-beta.57",
+    "@lerna/package": "^4.0.0",
     "@lerna/package-graph": "^4.0.0",
     "debug": "^4.3.1",
     "fs-extra": "^10.0.0",
