--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2018",
-    "outDir": "dist",
+    "outDir": "lib",
     "lib": [
       "dom",
       "es2018"
