--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@electron-forge/plugin-lerna",
+  "name": "electron-forge-plugin-lerna",
   "version": "0.0.0",
   "description": "",
   "main": "index.js",
